--- a/app/src/main/res/layout/fragment_edgewater.xml
+++ b/app/src/main/res/layout/fragment_edgewater.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="address"/>
+        android:text="@string/address_edgewater"/>
 
     <ListView
         android:layout_width="wrap_content"
