--- a/app/src/main/res/layout/fragment_lincolnpark.xml
+++ b/app/src/main/res/layout/fragment_lincolnpark.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
+    tools:context="com.example.moleigh.clevelandtourguide.LincolnParkFragment"
     android:padding="16dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lincoln Park" />
+        android:text="@string/address_lincolnpark"/>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/stuffToDo"
+        android:text="stuff to do"/>
 
 </LinearLayout>
