--- a/app/src/main/res/layout/fragment_steelyardcommons.xml
+++ b/app/src/main/res/layout/fragment_steelyardcommons.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.moleigh.clevelandtourguide.SteelyardCommonsFragment"
+    android:background="@color/steelyardBG"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,6 +11,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Steelyard Commons" />
+        android:text="@string/address_steelyard" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/stuffToDo"
+        android:text="stuff to do">
+    </ListView>
 
 </LinearLayout>
