--- a/app/src/main/res/layout/fragment_lincolnpark.xml
+++ b/app/src/main/res/layout/fragment_lincolnpark.xml
@@ -19,4 +19,16 @@
         android:id="@+id/stuffToDo"
         android:text="stuff to do"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/lincolnpark"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="@string/image_credit"
+        android:textSize="5sp"/>
+
 </LinearLayout>
