--- a/app/src/main/res/layout/fragment_steelyardcommons.xml
+++ b/app/src/main/res/layout/fragment_steelyardcommons.xml
@@ -20,4 +20,16 @@
         android:text="stuff to do">
     </ListView>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/steelyardcommons"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="@string/image_credit"
+        android:textSize="5sp"/>
+
 </LinearLayout>
